# binwh.quant-pilot

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/core/: dependencies.py
backend/app/models/: __init__.py  etf.py  fund.py  import_log.py  index.py  indicator.py  instrument.py  kline.py  market_regime.py  stock.py  user.py
backend/app/routers/: __init__.py  auth.py  data.py  health.py  indicators.py  market_regime.py
backend/app/schemas/: auth.py
backend/app/services/: scheduler.py
backend/app/services/auth/: config.py  security.py
backend/app/services/data/: __init__.py  _py_mini_racer_stub.py  akshare_client.py  akshare_source.py  baostock_source.py  base.py  guosen_client.py  guosen_source.py  importer.py  normalizer.py  registry.py  universe.py
backend/app/services/indicators/: __init__.py  adjust.py  ta.py
backend/app/services/market_regime/: __init__.py  classifier.py  clustering.py  config.py  evaluation.py  features.py  persist.py  pipeline.py  reduce.py
backend/scripts/: backfill_indicators.py  fix_etf_history.py  run_import.py  run_regime.py
backend/tests/: test_auth_router.py  test_auth_security.py  test_baostock_source.py  test_classifier.py  test_clustering.py  test_evaluation.py  test_features.py  test_importer.py  test_indicators.py  test_models.py  test_persist.py  test_pipeline.py  test_reduce.py  test_registry.py  test_sources.py  test_universe.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
(+48 files in other folders)
