[project]
name = "quantpilot-backend"
version = "0.1.0"
description = "QuantPilot 量化投研平台后端"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy>=2.0.35",
    "asyncmy>=0.2.9",
    "pydantic-settings>=2.5.2",
    "akshare>=1.14.0",
    "pandas>=2.0.0",
    "httpx>=0.27.2",
    "baostock>=0.9.2",
    # ML deps for market_regime closed-loop (见 docs/plans/2026-06-22-001)
    "scikit-learn>=1.4.0",
    "hmmlearn>=0.3.1",
    "joblib>=1.3.2",
    # auth (httpOnly cookie + refresh token)
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
